--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testing-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "capitalise.js",
   "dependencies": {
     "ansi-styles": "^3.2.1",
     "babel-plugin-polyfill-corejs2": "^0.3.3",
@@ -54,10 +54,11 @@
     "yallist": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2"
+    "@babel/preset-env": "^7.20.2",
+    "jest": "^29.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
